--- a/docstrings/numerical_simulation/environment_setup/gravity_field.yaml
+++ b/docstrings/numerical_simulation/environment_setup/gravity_field.yaml
@@ -189,6 +189,13 @@ classes:
         type: bool # [py]
         description: Boolean that denotes whether the field should be created as time-dependent (even if no variations are imposed initially). # [py]
 
+      - name: scaled_mean_moment_of_inertia # [py]
+        type: float # [py]
+        description: | 
+          Value of the scaled mean moment of inertia :math:`I_{xx}+I_{yy}+I_{zz}/(MR^{2})`. This value does not influence the gravity field itself,
+          but together with the degree 2 gravity field coefficients defines the body's inertia tensor.# [py]
+
+
     methods:
       - name: ctor # [cpp]
         short_summary: "Constructor." # [cpp]
@@ -948,4 +955,25 @@ functions:
         description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.gravity_field.GravityFieldSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.gravity_field.PolyhedronGravityFieldSettings` class
 
 
-#######################################################################
+  - name: constant_mass_properties # [py]
+    short_summary: "Factory function for creating constant mass properties."
+    extended_summary: |
+      Factory function for creating constant mass properties (mass, center of mass, inertia tensor). The center of mass and/or inertia tensor can be left empty (default)
+
+    parameters:
+      - name: mass # [py]
+        type: float # [py]
+        description: Constant mass of the body
+
+      - name: center_of_mass # [py]
+        type: np.array, default = numpy.empty((3, 1)) * numpy.nan # [py]
+        description: Constant center of mass of the body (in a body-fixed frame)
+
+      - name: inertia_tensor # [py]
+        type: np.array, default = numpy.empty((3, 3)) * numpy.nan # [py]
+        description: Constant inertia tensor of the body (in a body-fixed frame)
+
+
+    returns:
+        type: BodyMassPropertiesType
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.gravity_field.BodyMassPropertiesType` object with the given settings
