Update with rigid body dynamics

--- a/docstrings/numerical_simulation/environment_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/environment_setup/__package__.yaml
@@ -22,6 +22,7 @@ modules:
   - gravity_field_variation
   - ground_station
   - radiation_pressure
+  - rigid_body
   - rotation_model
   - shape
   - shape_deformation
