--- a/docstrings/numerical_simulation/propagation_setup/dependent_variable.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/dependent_variable.yaml
@@ -378,6 +378,12 @@ functions:
         type: str # [py]
         description: Body whose dependent variable should be saved.
 
+      - name: bodyWithAtmosphere # [cpp]
+        type: std::str # [cpp]
+      - name: body_with_atmosphere # [py]
+        type: str # [py]
+        description: Body with atmosphere with respect to which the temperature is computed.
+        
     returns:
         type: SingleDependentVariableSaveSettings
         description: Dependent variable settings object.
@@ -397,6 +403,12 @@ functions:
       - name: body # [py]
         type: str # [py]
         description: Body whose dependent variable should be saved.
+        
+      - name: bodyWithAtmosphere # [cpp]
+        type: std::str # [cpp]
+      - name: body_with_atmosphere # [py]
+        type: str # [py]
+        description: Body with atmosphere with respect to which the dynamic pressure is computed.
 
     returns:
         type: SingleDependentVariableSaveSettings
@@ -416,7 +428,12 @@ functions:
       - name: body # [py]
         type: str # [py]
         description: Body whose dependent variable should be saved.
-
+  
+      - name: bodyWithAtmosphere # [cpp]
+        type: std::str # [cpp]
+      - name: body_with_atmosphere # [py]
+        type: str # [py]
+        description: Body with atmosphere exerting the aerodynamic acceleration for which the g-load is to be computed
     returns:
         type: SingleDependentVariableSaveSettings
         description: Dependent variable settings object.
